Code Files/force-app/main/default/objects/Venue__c/fields/Availability_Status__c.field-meta.xml
<CustomField><fullName>Availability_Status__c</fullName><label>Availability Status</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Available</fullName><default>false</default><label>Available</label></value><value><fullName>Reserved</fullName><default>false</default><label>Reserved</label></value><value><fullName>Not Available</fullName><default>false</default><label>Not Available</label></value></valueSetDefinition></valueSet></CustomField>