Code Files/force-app/main/default/objects/Venue__c/fields/Capacity__c.field-meta.xml
<CustomField><fullName>Capacity__c</fullName><label>Capacity</label><type>Number</type><precision>8</precision><scale>0</scale></CustomField>