Code Files/force-app/main/default/objects/Venue__c/fields/Location__c.field-meta.xml
<CustomField><fullName>Location__c</fullName><label>Location</label><type>Url</type></CustomField>